# Homelab

./: .ansible-lint  .envrc  .gitignore  .nvim.lua  .yamllint  Dockerfile  README.md  ansible-playbook-wrapper  ansible.cfg  bootstrap.yml  build_charity.yml  build_server.yml  devboards.yml  devenv.yml  hosts.ini  hosts.yml  inventory.yml  justfile  packer-wrapper  pyproject.toml  server.yml  servers.yml  vault.secrets
docs/: mac-dev-environment.md  macos-dev-environment.md  technologies.md  todo.md  ubuntu-dev-environment.md
group_vars/: provisioned_nodes.yml
group_vars/all/: main.yml  vault.yml
group_vars/bob_group/: main.yml
group_vars/mister_group/: main.yml  vault.yml
group_vars/yoshimo_group/: main.yml  vault.yml
groups_vars/: new_servers.yml
host_vars/ebenezar.netdavis.io/: main.yml  vault.yml
host_vars/mister/: main.yml  vault.yml
packer/: build_charity.pkr.hcl  build_server.pkr.hcl
roles/ansible-prep/tasks/: main.yml  prep-Debian.yml
roles/ansible_bootstrap/defaults/: main.yml
roles/ansible_bootstrap/tasks/: bootstrap_Debian.yml  main.yml
roles/ansible_prep/defaults/: main.yml
roles/ansible_prep/handlers/: main.yml
roles/ansible_prep/tasks/: main.yml  prep-Debian.yml  prep_Debian.yml
roles/base/tasks/: localuser.yml  main.yml
roles/chrony/defaults/: main.yml
roles/chrony/handlers/: main.yml
roles/chrony/tasks/: main.yml
roles/chrony/templates/: chrony.conf.j2  chrony.keys.j2
roles/devenv/tasks/: workspaces_base.yml
roles/devtools/defaults/: main.yml
scripts/: firstrun.sh  get-latest-raspios-lite-image-url.py  master-bedroom.json  smart-lights.sh
vars/: charity.yaml
(+47 files in other folders)
