[tool.pyprojectx]
main = ["pdm"]

[tool.pdm]
distribution = false

[project]
name = "Homelab"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Stephen A. Davis", email = "stephen@webdavis.io"},
]
dependencies = ["ansible>=11.7.0", "passlib>=1.7.4"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "mdformat>=0.7.22",
]
