[project]
name = "homelab"
version = "0.1.0"
description = "My home network configuration/automation."
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "ansible>=12.2.0",
    "passlib>=1.7.4",
]

[dependency-groups]
dev = [
  {include-group = "lint"},
]
lint = [
    "ansible-lint>=25.9.2",
    "mdformat>=0.7.22",
    "mdformat-gfm>=1.0.0",
    "mdformat-tables>=1.0.0",
]
